# cv-final-project

./: .gitignore  README.md  annotations_captioned.csv  conch.ipynb  conch_classification.ipynb  conch_finetuning.ipynb  conch_prompt_generation_pruned.ipynb  generate_captions.py  image_only_experiment.py  main.py  mhist_with_captions.csv  mhist_zeroshot_model_comparison.csv  multimodal_experiment.py  optuna_optimization.py  plot_mhist.py  pyproject.toml  run_all_experiments.sh  run_comparative_experiments.sh  test_annotations_captioned.csv  visualize_attention.py
CNN/: MD5SUMs.txt  Testnb.ipynb  cnn_to_vit_tutorial.md  requirements.txt
captions/: crc100k_prompts_pruned_copy.json  mhist_with_captions_num_unfrozen=1_all_prompts.csv  mhist_with_captions_num_unfrozen=1_pruned.csv  mhist_with_captions_num_unfrozen=2_all_prompts.csv  mhist_with_captions_num_unfrozen=2_pruned.csv  mhist_with_captions_num_unfrozen=4_all_prompts.csv  mhist_with_captions_num_unfrozen=4_pruned.csv  mhist_with_captions_pruned.csv
conch_code_files/: conch_classification.ipynb  conch_classification_comparisons.ipynb  conch_prompt_generation.ipynb  conch_prompt_generation_finetuned.ipynb  conch_prompt_generation_pruned.ipynb
quilt_docs/: instructions.md  model_evaluation_report.md
quilt_notebooks/: model_demo.ipynb  requirements.txt
quilt_scripts/: run_all_experiments.sh  run_comparative_experiments.sh  run_image_only.sh  run_top1_experiments.sh
quilt_src/: image_only_experiment.py  multimodal_experiment.py  optuna_optimization.py  plot_mhist.py  visualize_attention.py
src/: plot_mhist.py  (+4 more)
(+6 files in other folders)
